# Connection-Machine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  buildandruntests.cmd  gcov_coverage.sh  opencpp_coverage.cmd
.github/workflows/: build-app.yml  cmake-multi-platform.yml  coverity-scan.yml
CircuitLib/: 16Regs.cir  16bit_256regs.cir  16bit_Bus_DFF.cir  16bit_CLA.cir  16bit_fibonacci_lsfr.cir  32_bit_counter.cir  Cube.cir  D Latch.cir  DFF.cir  EightBitAdder.cir  JK Flip-Flop.cir  ShiftRegister.cir  UART_RX.cir  URCL_16bit_ALU.cir  URCL_16bit_CPU.cir  URCL_16bit_CPU_internal.cir  Untitled.cir  Untitled4r.cir  WindowManager.cir  flappy_bird.cir  gpu-autodemo.cir  gpu.cir  tri_state.cir
CircuitLib/74 chips/: 7473_Duel_JK_Flip-Flop_Clear.cir
CircuitLib/BLIF/: FourBitAdder.blif
CircuitLib/procedural/: buildWasm.py  build_cache.json  cm.zig  edgeDetector.cpp  edgeDetector.wasm  edge_detector.zig  functions.h  note.txt
TestLib/: 16bit_ALU_test.tst  EightBitAdderTest.tst  TriStateTest.tst  TriStateTest.tt  TriStateTest_NoGroups.tst  TriStateTest_TT.tst
TutorialLib/: AdderTutorial.cmt  AndTutorial.cmt  BasicTutorial.tir  OrTutorial.cmt  sample.tir
cmake/: apple.cmake  dependencies.cmake  makeApp.cmake  makeCLI.cmake  makeFuzzer.cmake  makeTests.cmake
docs/: building.md  conventions.md
docs/circuit_lib_documentation/: procedural_circuits.md
fuzzing/: failingCaseFinder.cpp  failingCaseFinder.h  fuzzTestcase.cpp  fuzzTestcase.h  main.cpp  testcaseMinifier.cpp  testcaseMinifier.h
fuzzing/circuits/: bus_tristate_2.cir  full_adder.cir
resources/: wasmBuilder.py  wasmBuilder.sh  wasmCompileCommand.json
resources/tutorials/: AdderTutorial.cmt  AndTutorial.cmt  Intro.cmt  OrTutorial.cmt
src/: app.cpp  app.h  main.cpp  precompiled.h
src/backend/: address.h  backend.cpp  backend.h  dataUpdateEventManager.cpp  dataUpdateEventManager.h
src/cli/: cliApp.h  command.h  commandManager.cpp  commandManager.h  main.cpp  testCommand.h
src/computerAPI/: circuitTestFileLoader.cpp  circuitTestFileLoader.h  fileLoader.cpp  (+13 more)
tests/: addressTest.cpp  blockTest.cpp  circuitSelectionTest.cpp  circuitSelectionTest.h  circuitTest.cpp  circuitTest.h  dumpState.cpp  evaluatorICTest.cpp  evaluatorICTest.h  evaluatorTest.cpp  evaluatorTest.h  getNonExistingObjects.cpp  getNonExistingObjects.h  loggingTestSetup.cpp  loggingTestSetup.h  main.cpp  orientationTest.cpp  positionTest.cpp  positionTest.h  randomGens.cpp  randomGens.h
(+475 files in other folders)
